amended pom.xml: added <compilerArgs>                                            <arg>--add-opens</arg>                                            <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>                                        </compilerArgs>