@@ -77,7 +77,6 @@
 			<version>1.5.5.Final</version>
 			<scope>provided</scope>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-json -->
 			</dependencies>
 
 	<build>
@@ -90,8 +89,8 @@
 					<source>17</source>
 					<target>17</target>
 					<compilerArgs>
-						<arg>--release</arg>
-						<arg>17</arg>
+						<arg>--add-opens</arg>
+						<arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
 					</compilerArgs>
 					<annotationProcessorPaths>
 						<path>
